# PiVA

./: .gitignore  CMakeLists.txt  README.md  build.sh
models/: fd_opt.param  fr_opt.param  model_1_opt.param
src/: autotracker.cpp  autotracker.hpp  cameracontrol.cpp  cameracontrol.hpp  cropface.cpp  face_def.hpp  facedatabase.cpp  facedatabase.hpp  facedetection.cpp  facedetection.hpp  live.cpp  live.hpp  makefrdb.cpp  mobilefacenet.cpp  mobilefacenet.hpp  piva.cpp  priorbox.cpp  priorbox.hpp
